2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forget_windows_and_nodes): Don't free node
	structures in a window's history when it is deleted.

	(info_handle_pointer): Don't save pagetop and point - done
	when info_set_node_of_window is called.

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): Fields added from INFO_WINDOW:
	nodes, pagetops, points, current, nodes_index, nodes_slots.  Field
	'window' not added.
	* info/info.h (INFO_WINDOW): Typedef deleted.

	* info/session.c (info_windows, info_windows_index)
	(info_windows_slots): Removed.
	(get_info_window_of_window, consistency_check_info_windows): Removed.

	(set_remembered_pagetop_and_point, remember_info_and_node)
	(forget_window_and_nodes, info_handle_pointer,
	(forward_move_node_structure, read_nodename_to_kill)
	(info_gc_file_buffers, kill_node): Access data in WINDOW objects
	instead of INFO_WINDOW objects.

	(info_win_find_node): Argument type changed from INFO_WINDOW to
	WINDOW.
	(info_split_window, kill_node): Loops over info_windows removed.

	* info/nodemenu.c (get_visited_nodes)
	* info/gc.c (gc_pointers): Iterate over 'windows' instead of
	'info_windows'.

2014-05-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <index lookup>: Look for
	case-ignoring initial substring in indices if no exact match found.

	* info/info.c (main): Set preprocess_nodes=0 when dumping output
	to a file.
	* info/session.c (dump_nodes_to_file): Checks for DUMP_APPEND removed.
	* info/session.h (DUMP_APPEND): Remove unused.

	* info/info-utils.c (info_new_reference): New function.
	* info/info.c (get_initial_file, add_initial_nodes)
	(info_find_matching_files): Call info_new_reference.

2014-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (point_next_line, point_prev_line): Check for
	whether we should call forward_move_node_structure or
	backward_move_node_structure added.