@@ -1092,7 +1092,7 @@ DECLARE_INFO_COMMAND (ea_possible_completions, _("List possible completions"))
 #endif /* !SPLIT_BEFORE_ACTIVE */
 
                 echo_area_completions_window = compwin;
-                remember_window_and_node (compwin, compwin->node);
+                remember_window_and_node (compwin);
               }
             else
               compwin = calling_window;
@@ -1102,7 +1102,7 @@ DECLARE_INFO_COMMAND (ea_possible_completions, _("List possible completions"))
           {
             window_set_node_of_window
               (compwin, possible_completions_output_node);
-            remember_window_and_node (compwin, compwin->node);
+            remember_window_and_node (compwin);
           }
 
         display_update_display (windows);
